book/v1/ja/little/part9-gradual-philosophy.md
---
title: The Little chibirigor Part 9 ― gradual の哲学（最終章）
description: "`untyped` の伝播を仕上げ、baseline を据え、chibirigor がわざと見逃す 4 箇所と gradual typing の哲学を整理する。"
sidebar:
  order: 10
---

# The Little chibirigor Part 9 ― gradual の哲学（最終章）

この章のゴール：**`untyped` の伝播を仕上げ、baseline を据え、「chibirigor がわざと見逃して
いる所」を総括する。** そして、漸進的型付け（gradual typing）という大きな流れと、その先の
Rigor へ接続します。前編はここで閉じます。

---

## 9-1. `untyped` は伝染する

最後の小さなコード変更を一つ。`untyped`（`Dynamic`）が union に混じったら、**全体を
`untyped`** にします：

```ruby
def union(types)
  flat = types.flat_map { |t| t.is_a?(Union) ? t.members : [t] }.uniq
  return Dynamic.new if flat.empty?
  return Dynamic.new if flat.any?(Dynamic)   # ★ untyped が混じれば全体 untyped
  return flat.first if flat.size == 1
  Union[flat.freeze]
end
```

<!-- run: examples/part9.rb -->
```text
c ? 1 : foo.bar  ->  untyped
c ? 1 : "a"      ->  1 | "a"
```

理屈は素直です。一部でも型を見失っているなら、その合併について断言はできない。`1 | untyped`
と中途半端に持つより、`untyped` と正直に言う。これが gradual の芯です。

---

## 9-2. chibirigor が「わざと見逃している」4 箇所

chibirigor は健全（sound）ではありません。**わざと**見逃します。それは「動くコードを
脅かさない」ためです。どこで見逃しているかを、最後にはっきりさせます：

1. **`untyped` は何でも受理する**（Part 7 の `accepts` が `:maybe`）。型を見失った境界の穴。
2. **ハッシュの未知キーは `nil`**（Part 6）。余剰キーも許す（open）。『しくみ』のように完全一致で
   弾けば、動く options ハッシュが真っ赤になる。
3. **`:maybe` を罰しない**（Part 7 の `dispatch`）。疑わしきは黙る。
4. **絞り込みは保守的**（Part 5）。読めない条件・disjoint・`Dynamic` は絞らない。

どれも「見逃し＝バグを見落とす危険」と引き換えに「誤検知＝動くコードを脅かす」を避けて
います。chibirigor（と Rigor）は、後者のコストをずっと重く見ます。

> いま標語として挙げたこの 4 つは、後編 **The Seasoned chibirigor** Part 7 で、
> **健全性（progress ＋ preservation）を*わざと*破る穴**として、形式の言葉で言い直します。
> 「なぜ unsound でよいのか」に、理論からの答えが付きます。前編 Part 0 の「わざと見逃す」
> 前振りと、後編 Part 7 の言い直しが、本書のブックエンドです。

- **① 型理論**：健全性（未定義動作の排除）か、誤検知の少なさか、というトレードオフ。
- **② Ruby だと**：動的言語に後付けの型。厳しすぎると現場のコードが回らない。
- **③ Rigor だと**：「動くコードを脅かさない」を最上位の価値に。わざと見逃す。

---

## 9-3. baseline ― 既存を呑み、新規だけ見る

それでも、初めて既存コードにかけると診断が大量に出ることはあります。そこで **baseline**：
最初に出た診断を「呑んだもの」として記録し、以降は**新規の診断だけ**を見せます。

```ruby
def check(source, baseline = [])
  # …診断を集める…
  diagnostics.reject { |d| baseline.include?(d) }
end
```

```ruby
base = check(source)              # 最初の診断を baseline として保存
check(edited_source, base)        # baseline に無い新規だけが出る
```

「既存の指摘は一旦そのまま、これから書くコードだけ綺麗に」── これも「脅かさない」の一形態
です（Rigor の `.rigor-baseline.yml` の縮図）。導入の最初の一回でいきなり全部を直させない、
つまり**既存コードを脅かさない**ためのもう一つの仕組みです。

### 何で照合するか ― 列は含めない

baseline は「同じ診断かどうか」を判定して、既知のものを引きます。ここで**何をキーに照合するか**
が設計の勘どころです。chibirigor の baseline は **行とメッセージだけ**で照合し、**列は含めません**。

理由は単純で、**同じ行を編集して桁がズレても baseline が外れない**ようにするためです。診断の
表示（Part 1 のキャレット `^^^`）には列・長さを持たせましたが、baseline の*同一性判定*には
持ち込まない ― 表示の精度と照合の安定性は別の話、という切り分けです。

実 Rigor の baseline（**ADR-22**）は、これをさらに堅牢にしています。デフォルトで照合するのは
**ルール ID**（どの規則に引っかかったか）で、**行番号はキーに含めません**。行が上下に動いても
baseline が外れにくい、という設計です。列を含めないのは chibirigor・Rigor いずれも同じ。
まとめると ― chibirigor は「行＋メッセージ」、Rigor は「ルール ID（行は含めない）」で照合し、
**どちらも列は見ない**。粗いキーほど、編集に強い baseline になります。

> **コラム：「なぜ報告されないのか」を調べる `rigor check --explain`**
>
> Rigor を使っていると「このバグを見落としているのでは？」という疑問が生じることがあります。
> そのときの調査コマンドが `rigor check --explain` です。
>
> 通常の `rigor check` は証明できた問題だけを報告し、`Dynamic[Top]`（`untyped`）に
> *fall-soft* した箇所は黙っています。`--explain` を付けると、その**fall-soft した全箇所が
> `:info` 診断として現れます** ― 「ここで型を見失いました」という地図が出力されます。
>
> 「なぜ診断が出ないか」の答えは大抵「その式が `untyped` になっているから」です。
> `--explain` の出力を手がかりに「どこで型が消えたか」を遡ると、
> RBS の不足・プラグイン未設定・型注釈の抜け漏れを発見できます。
> chibirigor の「知らなければ黙る」は誤検知を防ぎますが、それは同時に
> 「静かに見逃す」でもあります ― `--explain` はその沈黙を可視化する道具です。
>
> この地図が描けるのは、Part 1 で触れた `Dynamic[Top]` の `Dynamic` マーカーが、fall-soft した
> 箇所に**消えずに残っている**からです。「どこで黙ったか」が構造として残るからこそ、後から
> 一覧にできる。詳しくは付録 a3（道具）にも整理があります。

---

## 9-4. 特別な型 3 種を総括する

前編を通して、ふつうの型（`Integer`・`String`・`Const[1]`…）とは毛色の違う**「特別な型」**が
何度か顔を出しました。最後にここで束ねておきます。どれも「チェッカーに*ある態度*を告げる印」
で、ふつうの型のように「値の形」を表しているのではありません。

| 型 | 制御は戻る？ | 値は？ | 一言 | 初出 |
|---|---|---|---|---|
| `untyped`（`Dynamic[Top]`） | ― | あるが**型が不明** | 「中身が分からない ─ 黙る」 | Part 1 |
| `void` | **戻る** | あるが**見るな** | 「戻り値を当てにするな」 | Part 8 |
| `never`（`Bot`） | **戻らない** | **無い**（住人ゼロ） | 「そもそも返ってこない」 | Part 4／5 |

そしてこの 3 つの足元には、格子の**上端 `Top`（⊤）と下端 `Bot`（⊥）**があります。`untyped` は
`Top` に「黙れ」のマーカー（`Dynamic`）を重ねたもの、`never` は `Bot` そのもの、`void` は
*格子上のふるまい*としては `Top` の隣 ― という関係でした。

- **`untyped`**：型を**見失った**ときの逃げ場。何でも受理し、何にでも渡せる（健全性を捨てた
  「黙る」型）。前編でいちばん働いた特別な型で、9-1 の「伝染」もこれです。
- **`void`**：戻り型の位置に立てる「黙れ」。「値は返るが当てにするな」。`-> nil` と違って
  実装が後で戻り値を変えても破壊的変更にならない、という**契約**上の実益があります。
- **`never`／`Bot`**：住人ゼロの型。「この枝には**到達しない**」を表し、ナローイングの
  dead branch（Part 5）や、決して返らない式の型です。

> 深掘りはそれぞれ別の場所に置きました。3 種のカタログ（軸 A：部分型の位置／軸 B：チェックの
> 有無、`any`/`unknown` 他言語対応表）は**付録 a1**。`never`／`Bot`（底型と部分型格子）の本式は
> **後編 Part 2（部分型と変性）**、`void`／`Top`（双方向の `⇐` 側でどう効くか）は
> **後編 Part 1（双方向型付け）**で扱います。前編では「3 つの特別な型がある」と束ねるところまで。

---

## 9-5. ここから先 ― gradual typing と Rigor へ

chibirigor は、最初から一貫してこの立場で作ってきました：

| | 静的・健全なチェッカー | chibirigor（漸進的） |
|---|---|---|
| 判定 | 適合・不適合の二値 | `:yes`/`:no`/`:maybe` の三値 |
| 未知の型 | 無い（注釈必須） | `untyped`（`Dynamic`）が主役 |
| 不適合のとき | 例外で止まる | 診断を貯めて続行、未知は黙る |
| 価値観 | 健全性 | 誤検知を出さない（脅かさない） |

「型を見失っても止まらない」「わからない所は黙る」「動くコードを脅かさない」── この漸進的型付け
は型システム研究の一つの到達点で、Siek & Taha の gradual typing（2006）などが
土台にあります。chibirigor は、その入口を*自分の手で*なぞったものです。

> **参考書メモ（任意）**：『しくみ』や TAPL をお持ちなら ― あの本は静的で健全なチェッカーを
> 作り、最後に「次のフロンティア」として gradual typing を指さして終わります。chibirigor は、
> ちょうどその先から始めた、と読めます。併読すると「なぜ三値か」「なぜ `untyped` に逃がすか」が
> 腑に落ちやすいでしょう（無くても本書だけで完結します）。健全性の本式は TAPL 8 章 §8.3「安全性 = 進行 + 保存」、gradual はその先（TAPL 後の研究）です。

そして chibirigor を作り終えたいま、本物の Rigor を覗くと、ここで見た一つ一つ
（`Scope`・`accepts`・ナローイング・RBS・sig 推論）が、実用規模で作り込まれているのが
分かります。**chibirigor は、Rigor への入口です。**

---

## 9-6. ここまでのまとめ（前編 全 9 章）

| Part | 足したもの |
|---|---|
| 1 | `Const`/`Dynamic`/`Nominal`、`type_of`、`check`/`annotate` |
| 2 | `Dispatch`（メソッド表）、未知は degrade、定数畳み込み（発展） |
| 3 | 不変 `Scope`、`eval_statement`（文を縫う） |
| 4 | `Union`、`if`/三項で枝の型を 1 本にまとめる |
| 5 | `narrow`、`nil?`/`is_a?` ナローイング、2 つの掟、再代入リセット（dead branch は絞らない） |
| 6 | `HashShape`/`Tuple`、添字読み（未知キーは nil・open） |
| 7 | `accepts`（三値）、`:no` だけ報告 |
| 8 | `Rbs.load`、`def` の戻り型合成、RBS 風シグネチャ、`untyped` の可視化 |
| 9 | `untyped` の伝播、baseline、わざと見逃す総括、特別な型 3 種 |

## 前編を読み終えたあなたができること

数百行の Ruby だけで、ここまで来ました：

- Ruby のソースから**型を推論**し（リテラル・メソッド・変数・分岐・ハッシュ/配列）、
- 矛盾を**診断**として報告し（しかも止まらず、わからない所は黙る）、
- 推論した型と**メソッドのシグネチャ**を `annotate` で見せ、
- 既存コードを **baseline** で呑んで「これから書くコードだけ」を綺麗に保ち、
- 「**動くコードを脅かさない**」を、`untyped`・三値・open shape・保守的ナローイング・baseline
  という具体的な仕組みとして実装した。

これは本物の Rigor の最小版です。後編では、この一つ一つに**理論の裏打ち**を与えます。

## 演習

1. `c ? 1 : foo.bar` が `untyped` になることを確かめ、`union` のどの行が効いたか指せ。
2. `check` に baseline を渡し、既存の診断が消え、新規の診断だけが出ることを確かめよ。
3. baseline が「行＋メッセージ」で照合し列を含めないのはなぜか。同じ行の末尾に空白を足して桁を
   ずらしたら baseline はどうなるか、9-3 の照合キーから説明せよ。
4. 「わざと見逃す 4 箇所」のうち 1 つ（例：未知キー→nil）を、あえて厳しく（エラーに）したら、
   どんな*動くコード*が脅かされるか、具体例を 1 つ挙げよ。

---

**続編「The Seasoned chibirigor」へ**：双方向型付けの形式化、変性、再帰型、本物の型推論（引数推論）、
完全な FactStore、健全性理論、`erasure`/sig-gen 本体 ―『型システムのしくみ』の先と、Rigor の
作り込みへ。前編で*手を動かして*作ったものに、後編で*理屈の名前*が付きます。
